fix social-fb showing on mobile

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,19 +1,29 @@
 .social-fb {
-  background: #fff;
-  border: 1px solid #e9eff3;
-  border-left: none;
-  border-radius: 0 3px 3px 0;
-  box-shadow: 0 2px 4px 0 rgba(233,239,243,.9);
-  font-size: 2.5em;
-  left: 0;
-  padding: 10px 20px;
-  position: fixed;
-  text-align: center;
-  top: 50%;
-  transform: translateY(-100%);
-  z-index: 5;
+  display: none;
 }
 
-.social-fb a{
-  color: #3b5998;
+/* Larger than phone */
+@media (min-width: 750px) {
+  .social-fb {
+    background: #fff;
+    border: 1px solid #e9eff3;
+    border-left: none;
+    border-radius: 0 3px 3px 0;
+    box-shadow: 0 2px 4px 0 rgba(233,239,243,.9);
+    display: block;
+    font-size: 2.5em;
+    left: 0;
+    padding: 10px 20px;
+    position: fixed;
+    text-align: center;
+    top: 50%;
+    transform: translateY(-100%);
+    z-index: 5;
+  }
+
+  .social-fb a{
+    color: #3b5998;
+  }
 }
+
+
